--- a/Style/navbarpage_style.css
+++ b/Style/navbarpage_style.css
@@ -2,11 +2,19 @@
     box-sizing: border-box;
   }
 
+  .navbar-brand {
+    float: left;
+    padding: 10px 15px;
+    height: 60px;
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+  background-color: rgba(255, 255, 255, 0);
+}
   .navbar-default {
     background-color: #4b2e83!important; /*title background color*/
     height: 28px;
   }
-
+  
   .navbar-default .navbar-brand {
     font-family: "Encode Sans Compressed",sans-serif;
     src: "Style/Encode Sans Family";
@@ -14,127 +22,141 @@
     font-size: 22px; 
   }
 
-  body {
-    font-family: "Open Sans",sans-serif;
-    src: "Style/Open Sans Family";
-    font-size: 14px;
-    line-height: 1.42857143;
-    background-color: #ffffff;
+.navbar-default .navbar-nav>li>a {
+  color: #ffffff !important;
+  src: "Style/Encode Sans Family";
+  font-size: 18px !important;
 }
-  p {
-    font-size: 14px;
-    line-height: 1.72222;
-    margin: 0 0 14.5px;
-    font-weight: normal;
-    color: #3D3D3D;
-    -webkit-font-smoothing: antialiased;
+
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+  color: #ffffff !important;
+  src: "Style/Encode Sans Family";
+  font-size: 18px !important;
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+  background-color: #4b2e83;
+}
+
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+  color: #b7a57a !important;
+}
+
+body {
+  font-family: "Open Sans",sans-serif;
+  src: "Style/Open Sans Family";
+  font-size: 14px;
+  line-height: 1.42857143;
+  background-color: #ffffff;
+}
+
+p {
+  font-size: 14px;
+  line-height: 1.72222;
+  margin: 0 0 14.5px;
+  font-weight: normal;
+  color: #3D3D3D;
+  -webkit-font-smoothing: antialiased;
 }
 
 input[type="radio"], input[type="checkbox"] {
-  margin: 4px 0 0;
-  color: #4b2e83;
-  margin-top: 1px \9;
-  line-height: normal;
+margin: 4px 0 0;
+color: #4b2e83;
+margin-top: 1px \9;
+line-height: normal;
 }
 
 
-  .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-    color: #b7a57a;
-    background-color: transparent; /*title hover*/
-  }
-
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-  color: #4b2e83;
-  background-color: #4b2e83;
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+  color: #b7a57a;
+  background-color: transparent; /*title hover*/
 }
-/* title tab color*/
 
 .btn-default {
-  color: #5A5A5A;
-  background-color: #e8e3d3;
-  border-color: #e8e3d3;
+color: #5A5A5A;
+background-color: #e8e3d3;
+border-color: #e8e3d3;
 } /*button default*/
 
 .btn-default:hover {
-  color: #b7a57a;
-  background-color: #e8e3d3;
-  border-color: #e8e3d3;
+color: #b7a57a;
+background-color: #e8e3d3;
+border-color: #e8e3d3;
 } /*button hover default*/
 
 .navbar-default .navbar-nav>li>a {
-  color: #4b2e83;
-  background-color: #4b2e83;
+color: #4b2e83;
+background-color: #4b2e83;
 } /* title tab color*/
 
-  .nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
-    color: #ffffff;
-    background-color: #b7a57a;
-    border: 1px solid #ecf0f1;
-    border-bottom-color: transparent;
-    cursor: default;
-  } /* selected tab color*/
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
+  color: #ffffff;
+  background-color: #b7a57a;
+  border: 1px solid #ecf0f1;
+  border-bottom-color: transparent;
+  cursor: default;
+} /* selected tab color*/
 
-  a {
-    color: #5F5F5F;
-    text-decoration: none;
-    background-color: #EEEEEE;
-  } /* other color */
+a {
+  color: #5F5F5F;
+  text-decoration: none;
+  background-color: #EEEEEE;
+} /* other color */
 
 
-  a:focus, a:hover {
-    color: #ffffff;
-    text-decoration: underline;  /*hover color*/
+a:focus, a:hover {
+  color: #ffffff;
+  text-decoration: underline;  /*hover color*/
 }
 
 .nav-tabs>li>a:hover {
-  border-color: #b7a57a #b7a57a #b7a57a; /*hover line color*/
+border-color: #b7a57a #b7a57a #b7a57a; /*hover line color*/
 }
 
 .nav>li>a:hover, .nav>li>a:focus {
-  text-decoration: none;
-  background-color: #b7a57a;/*hover background color*/
+text-decoration: none;
+background-color: #b7a57a;/*hover background color*/
 }
 
-  .well {
-    min-height: 20px;
-    padding: 15px;
-    margin-bottom: 20px;
-    background-color: #e8e3d3;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
-    box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
+.well {
+  min-height: 20px;
+  padding: 15px;
+  margin-bottom: 20px;
+  background-color: #e8e3d3;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
+  box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
 } /* sidebar panel */
 
 .js-irs-0 .irs-single, .js-irs-0 .irs-bar-edge, .js-irs-0 .irs-bar {
-  color:#4b2e83;
-  background: transparent;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
+color:#4b2e83;
+background: transparent;
+border-top: 1px solid transparent;
+border-bottom: 1px solid transparent;
 } /* slider year text color*/
 
 .irs--shiny .irs-min, .irs--shiny .irs-max {
-  top: 0;
-  padding: 1px 4px;
-  text-shadow: none;
-  background-color: #c5bbd4;
-  border-radius: 3px;
-  font-size: 12x;
-  line-height: 1.333;
+top: 0;
+padding: 1px 4px;
+text-shadow: none;
+background-color: #c5bbd4;
+border-radius: 3px;
+font-size: 12x;
+line-height: 1.333;
 }/* slider text color*/
 
 .irs--shiny .irs-handle {
-  top: 17px;
-  width: 22px;
-  height: 24px;
-  border: 1px solid #4b2e83;
-  background-color: #4b2e83;
-  box-shadow: 1px 1px 3px #4b2e83;
-  border-radius: 22px;
+top: 17px;
+width: 22px;
+height: 24px;
+border: 1px solid #4b2e83;
+background-color: #4b2e83;
+box-shadow: 1px 1px 3px #4b2e83;
+border-radius: 22px;
 }  /* slider year color*/
 
 .irs--shiny .irs-handle.state_hover, .irs--shiny .irs-handle:hover {
-  background: #4b2e83;
+background: #4b2e83;
 }/* slider year hover color*/
 
 .radio-inline, .checkbox-inline {
@@ -145,35 +167,25 @@ input[type="radio"], input[type="checkbox"] {
   vertical-align: middle;
   font-weight: bold;
   cursor: pointer;
-}
-
-.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary, .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-primary {
+  }
+  
+  .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary, .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-primary {
   background: #4b2e83;
   color: #fff;
-}
-
-Style Attribute {
+  }
+  
+  Style Attribute {
   width: 90%;
   height: 80%;
   position: relative;
   cursor: inherit;
-}
-
-.slider-animate-button .play {
+  }
+  
+  .slider-animate-button .play {
   display: inline;
   background-color: #efe8d4;
   color: #3f059e;
-}
-
-.slider-animate-button { font-size: 15pt !important; }
-
-
-.navbar {
-  height: 45px;
-  min-height:45px !important;
-}
-.navbar-nav > li > a, .navbar-brand {
-    padding-top:1px !important; 
-    padding-bottom:1px !important;
-    height: 45px;
-}
+  }
+  
+  .slider-animate-button { font-size: 15pt !important; }
+    
