--- a/Style/navbarpage_style.css
+++ b/Style/navbarpage_style.css
@@ -278,3 +278,17 @@ a:focus, a:hover {
     color: #272727;
     text-decoration: none;
 }
+
+/*hover size*/
+.glyphicon {
+  font-size: x-large;
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
