--- a/Style/navbarpage_style.css
+++ b/Style/navbarpage_style.css
@@ -1,69 +1,69 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.nav-bar {
+  text-align: right;
+  background-color: #4b2e83;
+  width: 79%;
+  margin-top: 12px;
+  display: inline-block;
   }
 
-  .nav-bar {
-    text-align: right;
-    background-color: #4b2e83;
-    width: 79%;
-    margin-top: 12px;
-    display: inline-block;
-    }
-  
-  .navbar-brand {
-    float: left;
-    padding: 10px 15px;
-    height: 60px;
+.navbar-brand {
+  float: left;
+  padding: 10px 15px;
+  height: 60px;
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-  background-color: rgba(255, 255, 255, 0);
+background-color: rgba(255, 255, 255, 0);
 }
-  .navbar-default {
-    background-color: #4b2e83!important; /*title background color*/
-    height: 28px;
-  }
-  
-  .navbar-default .navbar-brand {
-    font-family: "Encode Sans Compressed",sans-serif;
-    src: "Style/Encode Sans Family";
-    color: #ffffff; /*title color*/
-    font-size: 18px; 
-  }
+.navbar-default {
+  background-color: #4b2e83!important; /*title background color*/
+  height: 28px;
+}
+
+.navbar-default .navbar-brand {
+  font-family: "Encode Sans Compressed",sans-serif;
+  src: "Style/Encode Sans Family";
+  color: #ffffff; /*title color*/
+  font-size: 18px; 
+}
 
 .navbar-default .navbar-nav>li>a {
-  color: #ffffff !important;
-  src: "Style/Encode Sans Family";
-  font-size: 18px !important;
+color: #ffffff !important;
+src: "Style/Encode Sans Family";
+font-size: 18px !important;
 }
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-  color: #ffffff !important;
-  src: "Style/Encode Sans Family";
-  font-size: 18px !important;
+color: #ffffff !important;
+src: "Style/Encode Sans Family";
+font-size: 18px !important;
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-  background-color: #4b2e83;
+background-color: #4b2e83;
 }
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-  color: #b7a57a !important;
+color: #b7a57a !important;
 }
 
 body {
-  font-family: "Open Sans",sans-serif;
-  src: "Style/Open Sans Family";
-  font-size: 14px;
-  line-height: 1.42857143;
-  background-color: #ffffff;
+font-family: "Open Sans",sans-serif;
+src: "Style/Open Sans Family";
+font-size: 14px;
+line-height: 1.42857143;
+background-color: #ffffff;
 }
 
 p {
-  font-size: 14px;
-  line-height: 1.72222;
-  margin: 0 0 14.5px;
-  font-weight: normal;
-  color: #3D3D3D;
-  -webkit-font-smoothing: antialiased;
+font-size: 14px;
+line-height: 1.72222;
+margin: 0 0 14.5px;
+font-weight: normal;
+color: #3D3D3D;
+-webkit-font-smoothing: antialiased;
 }
 
 input[type="radio"], input[type="checkbox"] {
@@ -75,8 +75,8 @@ line-height: normal;
 
 
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-  color: #b7a57a;
-  background-color: transparent; /*title hover*/
+color: #b7a57a;
+background-color: transparent; /*title hover*/
 }
 
 .btn-default {
@@ -97,23 +97,23 @@ background-color: #4b2e83;
 } /* title tab color*/
 
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
-  color: #ffffff;
-  background-color: #b7a57a;
-  border: 1px solid #ecf0f1;
-  border-bottom-color: transparent;
-  cursor: default;
+color: #ffffff;
+background-color: #b7a57a;
+border: 1px solid #ecf0f1;
+border-bottom-color: transparent;
+cursor: default;
 } /* selected tab color*/
 
 a {
-  color: #5F5F5F;
-  text-decoration: none;
-  background-color: #EEEEEE;
+color: #5F5F5F;
+text-decoration: none;
+background-color: #EEEEEE;
 } /* other color */
 
 
 a:focus, a:hover {
-  color: #ffffff;
-  text-decoration: underline;  /*hover color*/
+color: #ffffff;
+text-decoration: underline;  /*hover color*/
 }
 
 .nav-tabs>li>a:hover {
@@ -126,14 +126,14 @@ background-color: #b7a57a;/*hover background color*/
 }
 
 .well {
-  min-height: 20px;
-  padding: 15px;
-  margin-bottom: 20px;
-  background-color: #e8e3d3;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
-  box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
+min-height: 20px;
+padding: 15px;
+margin-bottom: 20px;
+background-color: #e8e3d3;
+border: 1px solid transparent;
+border-radius: 4px;
+-webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
+box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
 } /* sidebar panel */
 
 .js-irs-0 .irs-single, .js-irs-0 .irs-bar-edge, .js-irs-0 .irs-bar {
@@ -168,127 +168,127 @@ background: #4b2e83;
 }/* slider year hover color*/
 
 .radio-inline, .checkbox-inline {
-  position: relative;
-  display: inline-block;
-  padding-left: 20px;
-  margin-bottom: 3;
-  vertical-align: middle;
-  font-weight: bold;
-  cursor: pointer;
-  }
-  
-  .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary, .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-primary {
-  background: #4b2e83;
-  color: #fff;
-  }
-  
-  Style Attribute {
-  width: 90%;
-  height: 80%;
-  position: relative;
-  cursor: inherit;
-  }
-  
-  .slider-animate-button .play {
-  display: inline;
-  background-color: #efe8d4;
-  color: #3f059e;
-  }
-  
-  .slider-animate-button { font-size: 15pt !important; }
-
-  .btn.btn-circle {
-    border-radius: 20px;
-    font-size: 12px;
-    height: 30px;
-    line-height: 1;
-    padding: 2px 0;
-    text-align: center;
-    width: 30px;
+position: relative;
+display: inline-block;
+padding-left: 20px;
+margin-bottom: 3;
+vertical-align: middle;
+font-weight: bold;
+cursor: pointer;
 }
-    
+
+.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary, .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-primary {
+background: #4b2e83;
+color: #fff;
+}
+
+Style Attribute {
+width: 90%;
+height: 80%;
+position: relative;
+cursor: inherit;
+}
+
+.slider-animate-button .play {
+display: inline;
+background-color: #efe8d4;
+color: #3f059e;
+}
+
+.slider-animate-button { font-size: 15pt !important; }
+
+.btn.btn-circle {
+  border-radius: 20px;
+  font-size: 12px;
+  height: 30px;
+  line-height: 1;
+  padding: 2px 0;
+  text-align: center;
+  width: 30px;
+}
+  
 
 .btn-default {
-  color: #b7a57a;
-  background-color: #e8e3d3;
-  border-color: #e8e3d3;
+color: #b7a57a;
+background-color: #e8e3d3;
+border-color: #e8e3d3;
 }
 
 .btn-success {
-  color: #b7a57a;
-  background-color: #e8e3d3;
-  border-color: #e8e3d3;
+color: #b7a57a;
+background-color: #e8e3d3;
+border-color: #e8e3d3;
 }
 
 .btn-default:active:hover, .btn-default.active:hover, .open>.dropdown-toggle.btn-default:hover, .btn-default:active:focus, .btn-default.active:focus, .open>.dropdown-toggle.btn-default:focus, .btn-default:active.focus, .btn-default.active.focus, .open>.dropdown-toggle.btn-default.focus {
-  color: #ffffff;
-  background-color: #b7a57a;
-  border-color: #b7a57a;
+color: #ffffff;
+background-color: #b7a57a;
+border-color: #b7a57a;
 }
 
 .btn-default:focus, .btn-default.focus {
-  color: #b7a57a;
-  background-color: #e8e3d3;
-  border-color: #e8e3d3;
+color: #b7a57a;
+background-color: #e8e3d3;
+border-color: #e8e3d3;
 }
 
 .btn-success:active, .btn-success.active, .open>.dropdown-toggle.btn-success {
-  color: #ffffff;
-  background-color: #b7a57a;
-  border-color: #b7a57a;
+color: #ffffff;
+background-color: #b7a57a;
+border-color: #b7a57a;
 }
 
 .btn-success:active:hover, .btn-success.active:hover, .open>.dropdown-toggle.btn-success:hover, .btn-success:active:focus, .btn-success.active:focus, .open>.dropdown-toggle.btn-success:focus, .btn-success:active.focus, .btn-success.active.focus, .open>.dropdown-toggle.btn-success.focus {
-  color: #ffffff;
-  background-color: #b7a57a;
-  border-color: #b7a57a;
+color: #ffffff;
+background-color: #b7a57a;
+border-color: #b7a57a;
 }
 
 .btn-success:hover {
-  color: #ffffff;
-  background-color: #b7a57a;
-  border-color: #b7a57a;
+color: #ffffff;
+background-color: #b7a57a;
+border-color: #b7a57a;
 }
 
 .btn-default:hover {
-  color: #ffffff;
-  background-color: #b7a57a;
-  border-color: #b7a57a;
+color: #ffffff;
+background-color: #b7a57a;
+border-color: #b7a57a;
 }
 
 .btn-default {
-  color: #5A5A5A;
-  background-color: #e8e3d3;
-  border-color: #e8e3d3;
+color: #5A5A5A;
+background-color: #e8e3d3;
+border-color: #e8e3d3;
 }
 
 .btn-default:focus, .btn-default.focus {
-  color: #b7a57a;
-  background-color: #e8e3d3;
-  border-color: #e8e3d3;
+color: #b7a57a;
+background-color: #e8e3d3;
+border-color: #e8e3d3;
 }
 a:focus, a:hover {
-  color: #ffffff;
-  background-color: #b7a57a;
-  text-decoration: underline;
+color: #ffffff;
+background-color: #b7a57a;
+text-decoration: underline;
 }
-
 
 .btn:hover, .btn:focus, .btn.focus {
-    color: #272727;
-    text-decoration: none;
+  color:  #ffffff;
+  text-decoration: none;
+  background-color: #b7a57a;
 }
 
-/*hover size*/
+/* hover size
 .glyphicon {
-  font-size: x-large;
-  position: relative;
-  top: 1px;
-  display: inline-block;
-  font-family: 'Glyphicons Halflings';
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+font-size: x-large;
+position: relative;
+top: 1px;
+display: inline-block;
+font-family: 'Glyphicons Halflings';
+font-style: normal;
+font-weight: normal;
+line-height: 1;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+} */
